fixed ancher create collaborator

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -46,7 +46,7 @@
 <div class="project-collaborator pt-1">
   <div class="container py-5">
     <div class="d-flex">
-      <h4 class="mb-3 pr-5">Collaborators</h4>
+      <h4 class="mb-3 pr-5" id="collaborators">Collaborators</h4>
       <%= link_to collaboration_path(@project), class: "btn-s-blue-white" do %>
         <i class="fas fa-user-plus"></i>
       <% end %>
