--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,17 +25,17 @@
   <div class="d-flex justify-content-center">
     <div class="top-left-bloc w-50" style="background-image: url(<%= cl_image_path("homePage-diagram_tmkho2") %>);">
   </div>
-    <div class=" d-flex flex-column w-50">
+    <div class=" d-flex flex-column w-50 ">
       <div class="d-flex flex-grow-1 top-right-bloc">
-        <div class="px-5 col-md-4">
+        <div class="padding-sides col-md-4">
           <h2>SEEK FOR HELP </h2>
           <p>Having patients with rare and mysterious diseases?</p>
         </div>
-        <div class="px-5 col-md-4">
+        <div class="padding-sides col-md-4">
           <h2>BUILD A CASE</h2>
           <p>Gather informations and connect with doctors.</p>
         </div>
-        <div class="px-5 col-md-4">
+        <div class="padding-sides col-md-4">
           <h2>SHARE</h2>
           <p>Join forces and find solutions together.</p>
         </div>
