--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -11,7 +11,7 @@
       <div>
         <%= simple_form_for(@project) do |f| %>
           <%= f.input :name %>
-          <%= f.input :description %>
+          <%= f.input :description, as: :text, input_html: {rows: 10} %>
           <%= f.button :submit, class: "btn-s-blue" %>
         <% end %>
       </div>
